--- a/public/index.html
+++ b/public/index.html
@@ -1,241 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BullyNoMore - Stop Bullying Together</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-    <script src="https://unpkg.com/feather-icons"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: '#3b82f6', // blue-500
-                        secondary: '#ec4899', // pink-500
-                        light: '#f8fafc', // slate-50
-                    }
-                }
-            }
-        }
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TEST</title>
+  <style>
+    body {
+  </style>
 </head>
-<body class="bg-light min-h-screen">
-    <custom-navbar></custom-navbar>
-    
-    <main class="container mx-auto px-4 py-8">
-        <!-- Hero Section -->
-        <section class="bg-gradient-to-r from-primary to-secondary rounded-2xl p-8 text-white mb-12">
-            <div class="max-w-3xl mx-auto text-center">
-                <h1 class="text-4xl md:text-5xl font-bold mb-4">Together We Can Stop Bullying</h1>
-                <p class="text-xl mb-8">Understanding, preventing, and overcoming bullying in schools and workplaces</p>
-                <div class="flex flex-wrap justify-center gap-4">
-                    <a href="#what-is-bullying" class="bg-white text-primary px-6 py-3 rounded-full font-semibold hover:bg-opacity-90 transition">Learn More</a>
-                    <a href="#get-help" class="border-2 border-white px-6 py-3 rounded-full font-semibold hover:bg-white hover:bg-opacity-20 transition">Get Help</a>
-                </div>
-            </div>
-        </section>
+<body>
+  <div class="container">
+    <h1> TEST</h1>
+      <p1> test</p1>
 
-        <!-- What is Bullying Section -->
-        <section id="what-is-bullying" class="mb-16">
-            <div class="flex flex-col md:flex-row gap-8 items-center">
-                <div class="md:w-1/2">
-                    <img src="https://www.manarom.com/blog/img/dr_prani.jpg" alt="Dr. Pranee" class="rounded-lg shadow-lg w-full">
-                </div>
-                <div class="md:w-1/2">
-                    <h2 class="text-3xl font-bold text-primary mb-4">What is Bullying?</h2>
-                    <p class="text-lg mb-6">Bullying is intentional harmful behavior that is repeated over time and involves an imbalance of power. It can take many forms:</p>
-                    <div class="space-y-4">
-                        <div class="flex items-start gap-4">
-                            <div class="bg-primary text-white p-2 rounded-full">
-                                <i data-feather="alert-triangle"></i>
-                            </div>
-                            <div>
-                                <h3 class="font-semibold">Physical Bullying</h3>
-                                <p class="text-gray-600">Hitting, pushing, or damaging property</p>
-                            </div>
-                        </div>
-                        <div class="flex items-start gap-4">
-                            <div class="bg-primary text-white p-2 rounded-full">
-                                <i data-feather="message-square"></i>
-                            </div>
-                            <div>
-                                <h3 class="font-semibold">Verbal Bullying</h3>
-                                <p class="text-gray-600">Name-calling, threats, spreading rumors</p>
-                            </div>
-                        </div>
-                        <div class="flex items-start gap-4">
-                            <div class="bg-primary text-white p-2 rounded-full">
-                                <i data-feather="users"></i>
-                            </div>
-                            <div>
-                                <h3 class="font-semibold">Social Bullying</h3>
-                                <p class="text-gray-600">Exclusion, embarrassing someone publicly</p>
-                            </div>
-                        </div>
-                        <div class="flex items-start gap-4">
-                            <div class="bg-primary text-white p-2 rounded-full">
-                                <i data-feather="smartphone"></i>
-                            </div>
-                            <div>
-                                <h3 class="font-semibold">Cyberbullying</h3>
-                                <p class="text-gray-600">Online harassment, sharing private information</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Impact Section -->
-        <section class="bg-white rounded-xl shadow-md p-8 mb-16">
-            <h2 class="text-3xl font-bold text-center text-primary mb-8">The Impact of Bullying</h2>
-            <div class="grid md:grid-cols-3 gap-8">
-                <div class="bg-light p-6 rounded-lg text-center">
-                    <div class="bg-secondary text-white p-4 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-4">
-                        <i data-feather="heart"></i>
-                    </div>
-                    <h3 class="font-bold text-xl mb-2">On Victims</h3>
-                    <p class="text-gray-600">Low self-esteem, anxiety, depression, school avoidance, and in severe cases, self-harm or suicidal thoughts.</p>
-                </div>
-                <div class="bg-light p-6 rounded-lg text-center">
-                    <div class="bg-secondary text-white p-4 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-4">
-                        <i data-feather="user"></i>
-                    </div>
-                    <h3 class="font-bold text-xl mb-2">On Bullies</h3>
-                    <p class="text-gray-600">Increased risk of substance abuse, criminal behavior, and difficulty maintaining relationships later in life.</p>
-                </div>
-                <div class="bg-light p-6 rounded-lg text-center">
-                    <div class="bg-secondary text-white p-4 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-4">
-                        <i data-feather="eye"></i>
-                    </div>
-                    <h3 class="font-bold text-xl mb-2">On Bystanders</h3>
-                    <p class="text-gray-600">Feelings of guilt, fear of becoming targets themselves, and increased anxiety about school or work environments.</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- How to Help Section -->
-        <section class="mb-16">
-            <h2 class="text-3xl font-bold text-center text-primary mb-8">How You Can Help</h2>
-            <div class="grid md:grid-cols-2 gap-8">
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="font-bold text-xl mb-4 text-secondary">If You're Being Bullied</h3>
-                    <ul class="space-y-3">
-                        <li class="flex items-start gap-2">
-                            <i data-feather="check" class="text-primary"></i>
-                            <span>Remember it's not your fault - no one deserves to be bullied</span>
-                        </li>
-                        <li class="flex items-start gap-2">
-                            <i data-feather="check" class="text-primary"></i>
-                            <span>Tell a trusted adult about what's happening</span>
-                        </li>
-                        <li class="flex items-start gap-2">
-                            <i data-feather="check" class="text-primary"></i>
-                            <span>Stay near adults or groups of friends when possible</span>
-                        </li>
-                        <li class="flex items-start gap-2">
-                            <i data-feather="check" class="text-primary"></i>
-                            <span>Practice confident body language and responses</span>
-                        </li>
-                        <li class="flex items-start gap-2">
-                            <i data-feather="check" class="text-primary"></i>
-                            <span>Document incidents with dates, times, and details</span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="font-bold text-xl mb-4 text-secondary">If You Witness Bullying</h3>
-                    <ul class="space-y-3">
-                        <li class="flex items-start gap-2">
-                            <i data-feather="check" class="text-primary"></i>
-                            <span>Speak up if it's safe - say "That's not cool" or "Leave them alone"</span>
-                        </li>
-                        <li class="flex items-start gap-2">
-                            <i data-feather="check" class="text-primary"></i>
-                            <span>Support the person being bullied - walk away with them</span>
-                        </li>
-                        <li class="flex items-start gap-2">
-                            <i data-feather="check" class="text-primary"></i>
-                            <span>Report the incident to an authority figure</span>
-                        </li>
-                        <li class="flex items-start gap-2">
-                            <i data-feather="check" class="text-primary"></i>
-                            <span>Include the person being bullied in your activities</span>
-                        </li>
-                        <li class="flex items-start gap-2">
-                            <i data-feather="check" class="text-primary"></i>
-                            <span>Set a positive example with your own behavior</span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-        <!-- Get Help Section -->
-        <section id="get-help" class="bg-primary text-white rounded-2xl p-8 mb-16">
-            <div class="max-w-4xl mx-auto">
-                <h2 class="text-3xl font-bold mb-6">Need Immediate Help?</h2>
-                <p class="text-xl mb-8">If you or someone you know is experiencing bullying, these resources can help:</p>
-                <div class="grid md:grid-cols-3 gap-6">
-                    <a href="tel:027259595" class="bg-white text-primary p-6 rounded-lg text-center hover:bg-opacity-90 transition">
-                        <div class="bg-primary text-white p-4 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-4">
-                            <i data-feather="phone"></i>
-                        </div>
-                        <h3 class="font-bold text-lg mb-2">Call for Help</h3>
-                        <p>02-725-9595</p>
-                    </a>
-                    <a href="https://www.manarom.com/mhdoctors_thai.html" class="bg-white text-primary p-6 rounded-lg text-center hover:bg-opacity-90 transition">
-                        <div class="bg-primary text-white p-4 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-4">
-                            <i data-feather="users"></i>
-                        </div>
-                        <h3 class="font-bold text-lg mb-2">Find a Specialist</h3>
-                        <p>Search for doctors and therapists</p>
-                    </a>
-                    <a href="https://www.manarom.com/contact_thai.html" class="bg-white text-primary p-6 rounded-lg text-center hover:bg-opacity-90 transition">
-                        <div class="bg-primary text-white p-4 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-4">
-                            <i data-feather="mail"></i>
-                        </div>
-                        <h3 class="font-bold text-lg mb-2">Contact Us</h3>
-                        <p>Send us a message</p>
-                    </a>
-                </div>
-            </div>
-        </section>
-
-        <!-- Stories Section -->
-        <section class="mb-16">
-            <h2 class="text-3xl font-bold text-center text-primary mb-8">Real Stories, Real Impact</h2>
-            <div class="grid md:grid-cols-3 gap-8">
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <img src="https://www.manarom.com/blog/img/stop_bullying01.jpg" alt="School bullying" class="rounded-lg mb-4 w-full h-48 object-cover">
-                    <h3 class="font-bold text-xl mb-2">School Bullying</h3>
-                    <p class="text-gray-600 mb-4">"I was bullied for my accent in middle school. It made me dread going to school every day..."</p>
-                    <a href="#" class="text-secondary font-semibold hover:underline">Read more</a>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <img src="https://www.manarom.com/blog/img/stop_bullying02.jpg" alt="Workplace bullying" class="rounded-lg mb-4 w-full h-48 object-cover">
-                    <h3 class="font-bold text-xl mb-2">Workplace Bullying</h3>
-                    <p class="text-gray-600 mb-4">"My coworkers excluded me from important meetings and spread rumors about my work..."</p>
-                    <a href="#" class="text-secondary font-semibold hover:underline">Read more</a>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <img src="https://www.manarom.com/blog/img/stop_bullying05.jpg" alt="Cyberbullying" class="rounded-lg mb-4 w-full h-48 object-cover">
-                    <h3 class="font-bold text-xl mb-2">Cyberbullying</h3>
-                    <p class="text-gray-600 mb-4">"Someone created a fake profile using my photos and posted embarrassing comments..."</p>
-                    <a href="#" class="text-secondary font-semibold hover:underline">Read more</a>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <custom-footer></custom-footer>
-
-    <script src="components/navbar.js"></script>
-    <script src="components/footer.js"></script>
-    <script src="script.js"></script>
-    <script>feather.replace();</script>
+    <footer>
+      <p>TEST</p>
+    </footer>
+  </div>
 </body>
 </html>
