Change title and content from 'Komsan' to 'Praphakan'

--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Komsan</title>
+  <title>Praphakan</title>
   <style>
     body {
   </style>
 </head>
 <body>
   <div class="container">
-    <h1> Komsan </h1>
-      <p1> Komsan </p1>
+    <h1> Praphakan (h) </h1>
+      <p1> Praphakan (p) </p1>
 
     <footer>
-      <p>This is a footer</p>
+      <p>Praphakan (footer)</p>
     </footer>
   </div>
 </body>
