Update school link to use HTTPS

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <h1> Praphakan (h) </h1>
       <p1> Praphakan (p) </p1>
-<a href="pr.ac.th">เว็ปโรงเรียนผดุงราษฎร์ </a>
+<a href="https://pr.ac.th">เว็ปรร</a>
     <footer>
       <p>Praphakan (footer)</p>
     </footer>
