Update index.html with new Thai content

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Popup Mobile Friendly</title>
+<title>รักนะ</title>
 
 <style>
   body {
@@ -84,19 +84,20 @@
 </style>
 </head>
 <body>
+  <h>...รักนะ...</h>
 
 <!-- ปุ่มเปิด popup (อยู่กลางจอ) -->
-<button id="centerBtn">เปิดป๊อปอัป</button>
+<button id="centerBtn">กกตรงนี้😘</button>
 
 <!-- ปุ่มที่หนีตำแหน่ง -->
-<button id="moveBtn">กดให้ทันสิ 😆</button>
+<button id="moveBtn">งอนแน่😠</button>
 
 <!-- popup ตรงกลาง -->
 <div id="centerPopup">
   <div id="centerBox">
-    <img src="https://via.placeholder.com/350x200?text=Hello" alt="Popup Image">
-    <h3>ป๊อปอัปแบบภาพ + ข้อความ</h3>
-    <p>นี่คือป๊อปอัปตรงกลาง เหมาะกับมือถือ โทนชมพู–ฟ้า–ขาว 💖</p>
+    <img src="https://github.com/komsan2554/AbKomsanazure/blob/main/IMG_0484.png" alt="Popup Image">
+    <h3>กดทำไม🥰</h3>
+    <p>หยอกๆ💖</p>
     <button id="closeCenter">ปิด</button>
   </div>
 </div>
